crates/oxc_css_parser/tests/error/sass/sass-as-scss.snap
---
source: crates/oxc_css_parser/tests/error.rs
---
error: expect token `{`, but found `<at-keyword>`
  ┌─ sass-as-scss.scss:2:3
  │
2 │   @include typography(button)
  │   ^^^^^^^^


